fix: resolver 26 issues de auditoría (bugs, tests, consistencia)
- vista.js: selector de editar usa atributo data-accion (issue 01)
- app.js: mostrarDeshacer antes de enfocarDeshacer (issue 02)
- Fondo.java: toLowerCase/UpperCase con Locale.ROOT (issue 03)
- api.js: flush de guardado en pagehide, functions exported (issue 04/05)
- AlmacenTareas: validarIdsUnicos al cargar (issue 06)
- AlmacenFondos: clear antes de putAll al cargar (issue 07)
- AlmacenTareas/AlmacenFondos: finally deleteIfExists en guardarEnArchivo (issue 08)
- ManejadorErroresGlobal: handler para IllegalArgumentException (issue 10)
- index.html: remove role='status' de aviso-deshacer (issue 12)
- app.js: guard en terminarEdicion antes de reemplazarTarea (issue 13)
- TareasControllerTest: test para manejarInesperado (issue 15)
- RecursosEstaticosTest: test clave tareas.tema consistente (issue 18)
- TareasController: javadoc reordenar.moveTo sobre consultarFondos (issue 19)
- TareasControllerTest: javadoc actualizado sobre ResponseEntityExceptionHandler (issue 20)
- TareasService.reordenar: conservarSolo tras reordenar (issue 21)
- AlmacenFondos: conservarSolo usa HashSet + guard en asignar (issues 22/23)
- vista.js/preferencias.js: quitar exports no usados (issue 25)
- estado.js: obtenerTareas devuelve copia (issue 26)
- vista.js: renombrar tituloDelSelector (issue 27)
- AlmacenFondos.consultarTodos: TreeMap + unmodifiableMap (issue 29)
- TareasControllerTest: static import never(), 3 qualification removed (issue 30)